xds_envoy/gprc_xds/envoy.yaml
node:
  id: sidecar-100
  cluster: webcluster
admin: 
  access_log_path: /dev/null
  address:
    socket_address: { address: 0.0.0.0,port_value: 9901 }
static_resources:
  listeners:
  - name: http_listener
    address:
       socket_address: { address: 0.0.0.0,port_value: 80 }
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          stat_prefix: http_egress
          codec_type: AUTO
          route_config:
            name: test_route
            virtual_hosts:
            - name: web_service_1
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route: { cluster: webcluster }
          http_filters:
          - name: envoy.router
  clusters:
  - name: webcluster
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    type: EDS
    eds_cluster_config:
      service_name: webcluster
      eds_config:
        api_config_source:
          api_type: GRPC
          grpc_services:
            envoy_grpc:
              cluster_name: xds_cluster
  - name: xds_cluster
    connect_timeout: 0.25s
    lb_policy: ROUND_ROBIN
    type: STRICT_DNS
    http2_protocol_options: {}
    load_assignment:
      cluster_name: xds_cluster
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address: { address: xdsservice,port_value: 8081}
